# Odroid.GPIO

./: .gitignore  .pylintrc  CHANGELOG  LICENSE  LICENSE.txt  MANIFEST.in  README.md  install_requires.sh  setup.cfg  setup.py
c_src/: gpio.cpp
py_src/Odroid/GPIO/: __init__.py  gpio_event.py
py_src/RPi/GPIO/: __init__.py
src/Odroid/GPIO/: __init__.py
src/RPi/GPIO/: __init__.py
wrap/: wiringPi.i
