[metadata]
name = Odroid.GPIO
url = https://github.com/hhk7734
project_urls =
    Source = https://github.com/hhk7734/Odroid.GPIO

author = Hyeonki Hong
author_email = hhk7734@gmail.com
description = "A module to control Odroid GPIO channels"
long-description = file: README.md, CHANGELOG
long_description_content_type = text/markdown
keywords = odroid, gpio
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: System :: Hardware

[options]
package_dir =
    = py_src
packages = find:
zip_safe = False
setup_requires =
    pybind11>=2.4
install_requires =
    pybind11>=2.4

[options.packages.find]
where = py_src